<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Maksim Merkulov (DomenZero)
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>

    <string name="app_name">Layla - intellectual counter. V 1.0 </string>
    <string name="app_name_rating">Layla: Rating Players</string>
    <string name="app_name_num_players">Layla: How many add Players?</string>
    
    
    <string name="menu_play">Play</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rating">Rating</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_hint">Hint</string>	
           <string name="help_game_txt">
               How to Start. \n
        1. If havent database and null param in table, then you see "Please. Insert player":
        \n
        1.1 Select "Insert Players". \n
	    1.2 Select number Players. \n
	    1.3 Click "Enter" or "Start".\n
	    1.4 Write names of Players. In the end click image "Save disk" \n
	    1.5 Click "Start" \n
	    P.S. \n
	    If you have any questions or recomendations for project, \n
	    please go on website lepotuli.com or write to lepotuli@gmail.com\n
	    </string>
	
	    
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_hello">Hi, I Layla</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="input_pname">Input Player Name</string>
    <string name="edit_nplayer">Input Number Player</string>
    
    <string name="nameHint">Input Player Name</string>
<!--     <string name="EnterPays_TextView_ZeroValue">0</string> -->
    <string name="EnterPlayers_addPPlayers">Add Player</string>
    <string name="EnterPlayers_startGame">Start Game</string>
    
    <string name="item_players">Players</string>
    <string name="item_settings">Game Field</string>
    
    
    <string name="activity_item">Save</string>
    <string name="title_item">Update</string>
        
    <string name="quote_item">Winner!</string>
    <string name="secondary_item">Settings</string>
       

    <string name="num_players_text"> Please, select num Players </string>
    <string name="num_players_next"> Start </string>    
    
    <string name="fragment_game_number"> Player №</string>
    <string name="fragment_game_name"> Name: </string>    
    <string name="fragment_game_level"> Level: </string>
<!--     <array name="icons"> -->
<!--         <item>@drawable/home</item> -->
<!--         <item>@drawable/tutorials</item> -->
<!--         <item>@drawable/app</item> -->
<!--         <item>@drawable/os</item> -->
<!--         <item>@drawable/tool</item> -->
<!--         <item>@drawable/about</item> -->
<!--     </array> -->
    
    <string name="imgdesc">imgdesc</string>

    <string name="help_game_menu_play">Play game</string>
    <string name="help_game_menu_settings">Insert Players</string>
    <string name="help_game_menu_rating">Rating</string>
    <string name="help_game_menu_about">Help</string>
    <string name="help_game_menu_del">Delete Payers</string>
    <string name="help_game_menu_exit">Exit</string>

    <string name="clear_menu_button_Rating">Clear Rating Table</string>
    <string name="clear_menu_button_Players">Clear Players Table</string>
    
    <string name="clear_menu_string_Rating">Yes! Cleared!</string>
    <string name="clear_menu_string_Players">Cleared!</string>
    
    <string name="word_del_Player">Player </string>
    <string name="word_del_Clear">spaced out! </string>
   	<string name="word_save_Save">Saved </string>

   	<string name="saved">Saved </string>
    <string name="cancel">Cancel</string>
    <string name="yes">Saved </string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="exit_data">Confirm exit</string>
    <string name="del">Clear </string>
    <string name="del_data">Confirm clear</string>
    <string name="empty_list">Players list on add</string>
     <string name="del_list">Players list on delete</string>
        <string name="name">Players</string>
    <string name="rating">Rating</string>
    
    <string name="extra_attention">Not Players!</string>
    <string name="extra_insert">Please, adding Players ;)</string>
    <string name="extra_yes">Good!</string>
    
   	<string name="extra_attention_num"> Selected number players</string>
    <string name="extra_insert_num"> Slide screen right or left. And confirm selected</string>
    <string name="extra_yes_num">Good!</string>
    
            <string name="extra_attention_control"> Insert all players name</string>
    <string name="extra_insert_control">Enter the name of the player in entry field and save by pressing the disk. </string>
    <string name="extra_yes_control">Good!</string>
    <string name="text_winner">Hi-Hi! Good Gamer! Result saved) </string>
</resources>