<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_del_rating"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/clear_menu_button_Rating">
            <menu>
            <item
                android:id="@+id/hello_world2"
                android:title="@string/clear_menu_string_Rating"/>
        </menu>
        </item>  
    <item
        android:id="@+id/menu_del_players"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/clear_menu_button_Players">
            <menu>
            <item
                android:id="@+id/del_string_players"
                android:title="@string/clear_menu_string_Players"/>
        </menu>
        </item>  

</menu>
