<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2015 Maksim Merkulov (DomenZero)
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">
	
<TableLayout 
    
    android:id="@+id/TableButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:shrinkColumns="*">

<!--         <TableRow android:layout_weight="1" > -->

<TableRow 
    android:id="@+id/ButtonRow1"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content" >

<!--     <ToggleButton -->
<!--         android:id="@+id/buttonHint" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_gravity="center_horizontal" -->
<!--         android:text="@string/menu_hint" /> -->

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center|center_horizontal"
        android:text="@string/menu_play"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/menu_settings"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/menu_rating"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button" />

    <ImageButton
        android:id="@+id/button1"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/menu_about"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button" />

    <ImageButton
        android:id="@+id/button0"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/menu_exit"
        android:scaleType="fitCenter"
        android:background="@drawable/round_button" />

        </TableRow>
        
<TableRow 
    android:id="@+id/ButtonRow2"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content" >
    
    <TextView
        android:id="@+id/ButtonHelpView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:textSize="20dp"
       	android:textStyle="normal"
        android:text="@string/help_game_menu_play" />
    
        <TextView
        android:id="@+id/ButtonHelpView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:textSize="20dp"
       	android:textStyle="normal"
        android:text="@string/help_game_menu_settings" />
        
            <TextView
        android:id="@+id/ButtonHelpTextView3"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:textSize="20dp"
       	android:textStyle="normal"
        android:text="@string/help_game_menu_rating" />
            
                        <TextView
        android:id="@+id/ButtonHelpTextView4"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:textSize="20dp"
       	android:textStyle="normal"
        android:text="@string/help_game_menu_about" />
                        
                                                <TextView
        android:id="@+id/ButtonHelpTextView5"
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:textSize="20dp"
       	android:textStyle="normal"
        android:text="@string/help_game_menu_exit" />
    </TableRow>
    
    
</TableLayout>
</LinearLayout>